<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>cc.bronya</groupId>
        <artifactId>pgsql-ext-spring</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>pgsql-ext-mq</artifactId>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>cc.bronya</groupId>
            <artifactId>bronya-starter-db</artifactId>
        </dependency>
        <dependency>
            <!-- https://github.com/roy20021/pgmq-jdbc-client mq客户端 -->
            <groupId>org.andreaesposito</groupId>
            <artifactId>pgmq-jdbc-client</artifactId>
            <version>1.0.0</version>
        </dependency>
    </dependencies>

</project>